# bimWorkshopDatabase

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  VALUE_PROMPT.txt  __init__.py  chains.py  db_builder.py  emulate_original_prompt.ipynb  install_dependencies.py  loading.py  main.py  pyproject.toml  requirements.txt  swap.sh
db_builders/: __init__.py  base_search.py  loading.py  typedefs.py  utils.py
db_builders/name_finder/: __init__.py  base_finder.py  finder.py  parsing.py  product_page_finder.py  runtime.py  website_finder.py
db_builders/omniclass/: __init__.py  builder_functions.py  chains.py  runtime.py  typedefs.py
db_builders/search/: base_search.py  manufacturer_checker.py  name_extractor.py  runtime.py  search_handler.py  site_checker.py  utils.py
db_builders/typedefs/: omniclass.py
notebooks/: emulate_original_prompt.ipynb  explanatory_layer.ipynb  prompting_test.ipynb
src/: __init__.py  builder_functions.py  chains.py  db_builder.py
tests/: name_finder_tests.py
